--- a/config/local_settings.py.sample
+++ b/config/local_settings.py.sample
@@ -15,6 +15,9 @@ DATABASES = {
 SOCIAL_AUTH_DISCORD_KEY = ""
 SOCIAL_AUTH_DISCORD_SECRET = ""
 
-BASICAUTH_USERS = {         # Used to auth the bot
+SOCIAL_AUTH_MICROSOFT_KEY = ""
+SOCIAL_AUTH_MICROSOFT_SECRET = ""
+
+BASICAUTH_USERS = {         # Used by the bot
     'username': 'password',
 }
